--- a/components/backend-tests-java-springboot-diiqvhbp/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-java-springboot-diiqvhbp/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-java-springboot-diiqvhbp
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-java-springboot-diiqvhbp:d318be97b31e0ed7dcb343e83668fc1ae58ec36b@sha256:3dba7a43a750cee4688daaadeeebe760b691c7b030839cec732b12df83574523
+          name: container-image
